--- a/html/depStyle.css
+++ b/html/depStyle.css
@@ -12,9 +12,9 @@
       -ms-flex-pack:space-evenly;
           justify-content:space-evenly;
   width: 100vw;
-  background-color:#873e23 ;
+  background-color:#462012 ;
   margin-top: 4vh;
-
+height: auto;
 .pr{
   font-family:Lora;
 
@@ -22,7 +22,7 @@
   
 }
 .first{
-  height : 17vh;
+  height : auto;
   width: 12vw;
   color: black;
   background-color:#f1ca9b;
@@ -38,10 +38,12 @@ hr{
 
 }
 
-@media  screen and (max-width:1800px)  {
+@media  screen and (max-width:1200px)  {
   .first{
-      width: 200px;
+    width: 200px;
+    font-size: 15px;
   }
+  
  
 }
 
