--- a/css/style1.css
+++ b/css/style1.css
@@ -291,6 +291,8 @@ a{
     -webkit-transform: translateX(15px);
     -ms-transform: translateX(215x);
     transform: translateX(15px);
+  }.paperdivHeading:hover{
+    transform: none; 
   }
 
 }
