--- a/css/style2.css
+++ b/css/style2.css
@@ -295,6 +295,9 @@ a{
     -webkit-transform: translateX(15px);
     -ms-transform: translateX(215x);
     transform: translateX(15px);
+  }.paperdivHeading:hover{
+   
+    transform: none; 
   }
 
 }
